; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/smem/extr_smem.c_get_status.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/smem/extr_smem.c_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VCSM_STATUS_HOST_WALK_PID_MAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_status(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %24 [
    i32 128, label %6
    i32 131, label %8
    i32 130, label %18
    i32 129, label %21
  ]

6:                                                ; preds = %2
  %7 = call i32 @vcsm_status(i32 128, i32 -1)
  br label %25

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i32, i32* @VCSM_STATUS_HOST_WALK_PID_MAP, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @vcsm_status(i32 %12, i32 %13)
  br label %17

15:                                               ; preds = %8
  %16 = call i32 @vcsm_status(i32 131, i32 -1)
  br label %17

17:                                               ; preds = %15, %11
  br label %25

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @vcsm_status(i32 130, i32 %19)
  br label %25

21:                                               ; preds = %2
  %22 = call i32 @vcsm_status(i32 128, i32 -1)
  %23 = call i32 @vcsm_status(i32 131, i32 -1)
  br label %25

24:                                               ; preds = %2
  br label %25

25:                                               ; preds = %24, %21, %18, %17, %6
  ret i32 0
}

declare dso_local i32 @vcsm_status(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
